--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
     </header>
     <!-- Contenido - Inicio -->
     <H1 class="titulo">Progra-Mates</H1>
+    <h3 class="intro_index">Bienvenido/a a este sitio web dedicado a la gran infusión y sus componentes que forman el MATE. Esta bebida tradicional no solo es una parte esencial de la vida cotidiana en muchas regiones, sino que también representa una conexión profunda con las raíces culturales de Sudamérica.</h3>
     <section class="section_home">
         <!-- Como preparar un mate  - Cards con Bootstrap -->
         <div class="como_mate">
@@ -71,7 +72,7 @@
                   <div class="col-md-8">
                     <div class="card-body">
                       <h5 class="card-title">Paso 1</h5>
-                      <p class="card-text ">Antes de seguir codeando, ponemos el agua a calentar y la apartamos del fuego antes de que entre en ebullición (80°C aprox.)luego colocarla en un termo.</p>
+                      <p class="card-text ">Antes de seguir codeando, ponemos el agua a calentar hasta antes  de que entre en ebullición (80°C aprox.). Si es pava electrica poner en el indicador de agua antes de hervir o indicador de "agua para mate".Luego colocarla en un termo para que mantenga la temperatura.</p>
                     </div>
                   </div>
                 </div>
