--- a/html/Accesorios.html
+++ b/html/Accesorios.html
@@ -4,26 +4,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../img/Icono silueta mate.png" type="image/x-icon">
+    <link rel="stylesheet" href="../css/bootstrap.css">
     <link rel="stylesheet" href="../css/style.css">
     <title>Progra-Mates</title>
 </head>
 <body>
 <header id="top">
      <!-- Barra de Navegacion - Inicio-->
-     <Nav class="navegacion">
-        <div class="logo_container">
-            <img src="../img/silueta_mate_imagen-transformed.png" alt="Logotipo Olaf-Mates"class="logo">
-         <span>Progra-Mates</span>
-        </div> 
-         <ul class="navegacion_nav">
-             <li class="nav_item"><a href="../index.html">Home</a></li>
-             <li class="nav_item"><a href="../html/Productos.html">Productos</a></li>
-             <li class="nav_item"><a href="../html/Accesorios.html">Accesorios</a></li>
-             <li class="nav_item"><a href="../html/Nosotros.html">Nosotros</a></li>
-             <li class="nav_item"><a href="../html/Contacto.html">Contacto</a></li>
-         </ul>
-         
-     </Nav>
+     <div class="logo_container">
+     <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <img src="../img/silueta_mate_imagen-transformed.png" alt="Logotipo Olaf-Mates"class="logo">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="../index.html">Progra-Mates</a>
+         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+           <span class="navbar-toggler-icon"></span>
+         </button>
+         <div class="collapse navbar-collapse" id="navbarNavDropdown">
+           <ul class="navbar-nav">
+             <li class="nav-item">
+               <a class="nav-link active" aria-current="page" href="./Productos.html">Productos</a>
+             </li>
+             <li class="nav-item">
+               <a class="nav-link" href="./Accesorios.html">Accesorios</a>
+             </li>
+             <li class="nav-item">
+               <a class="nav-link" href="./Nosotros.html">Nosotros</a>
+             </li>
+             <li class="nav-item">
+               <a class="nav-link" href="./Contacto.html">Contacto</a>
+             </li>
+             <!-- <li class="nav-item dropdown">
+               <a class="nav-link dropdown-toggle" href="./Contacto.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                 Contacto
+               </a> -->
+               <!-- <ul class="dropdown-menu">
+                 <li><a class="dropdown-item" href="#">Action</a></li>
+                 <li><a class="dropdown-item" href="#">Another action</a></li>
+                 <li><a class="dropdown-item" href="#">Something else here</a></li>
+               </ul> -->
+             </li>
+           </ul>
+         </div>
+       </div>
+     </nav>
      <!-- Barra de Navegacion - Fin-->
 </header>
 <h2 class="titulo_accesorios"> Accesorios </h2>
@@ -48,12 +71,15 @@
     </section>
 <!-- Contenido - Fin -->
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
-    <a href="#top">Volver arriba</a>
+    <script src="./js/bootstrap.js"></script>
+
+    <a  href="#top"><button class="boton_abajo">Volver arriba</button></a> 
 </body>
 
 
 <footer>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam fugiat esse excepturi minus dolor 
+    <p>DW/CH - todos los derechos reservados - 2023</p>
 </footer>
 </html>
