--- a/index.html
+++ b/index.html
@@ -180,13 +180,14 @@
 
 
     <br><br><br>
-    <a href="#top">Volver arriba</a>
+    <a  href="#top"><button class="boton_abajo">Volver arriba</button></a>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="./js/bootstrap.js"></script>
 </body>
 
 <footer>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam fugiat esse excepturi minus dolor error dicta similique accusamus enim exercitationem. Officiis ex asperiores dolorum pariatur quas mollitia impedit, vitae provident!</p>
+  
+    <p>DW/CH - todos los derechos reservados - 2023</p>
 </footer>
 </html>
