--- a/html/Nosotros.html
+++ b/html/Nosotros.html
@@ -55,7 +55,7 @@
 
 <br><br>
 
-<p class="nuestra_historia"> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime suscipit excepturi quisquam magnam! Corporis id architecto, asperiores ipsam et, commodi ipsum harum fugit optio repellendus explicabo libero reiciendis eligendi. Eos. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor sint aliquid delectus autem quam eos, repudiandae doloremque modi repellat, earum blanditiis quidem hic soluta aperiam tempore voluptas. Non, harum vel.</p>
+<p class="nuestra_historia"> Somos Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime suscipit excepturi quisquam magnam! Corporis id architecto, asperiores ipsam et, commodi ipsum harum fugit optio repellendus explicabo libero reiciendis eligendi. Eos. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor sint aliquid delectus autem quam eos, repudiandae doloremque modi repellat, earum blanditiis quidem hic soluta aperiam tempore voluptas. Non, harum vel.</p>
 <!-- Mapa de ubicacion-->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
