--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
              <div class="collapse navbar-collapse" id="navbarNavDropdown">
                <ul class="navbar-nav">
                  <li class="nav-item">
-                   <a class="nav-link active" aria-current="page" href="/html/Productos.html">Productos</a>
+                   <a class="nav-link active" aria-current="page" href="./html/Productos.html">Productos</a>
                  </li>
                  <li class="nav-item">
-                   <a class="nav-link" href="/html/Accesorios.html">Accesorios</a>
+                   <a class="nav-link" href="./html/Accesorios.html">Accesorios</a>
                  </li>
                  <li class="nav-item">
-                   <a class="nav-link" href="/html/Nosotros.html">Nosotros</a>
+                   <a class="nav-link" href="./html/Nosotros.html">Nosotros</a>
                  </li>
                  <li class="nav-item">
-                   <a class="nav-link" href="/html/Contacto.html">Contacto</a>
+                   <a class="nav-link" href="./html/Contacto.html">Contacto</a>
                  </li>
                  <!-- <li class="nav-item dropdown">
                    <a class="nav-link dropdown-toggle" href="./Contacto.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
