--- a/html/Productos.html
+++ b/html/Productos.html
@@ -71,7 +71,7 @@
      <section class="conteiner_productos">
      <div class="card">
         <img 
-        src="/img/Mate-torpedo-negro.jpg" 
+        src="../img/Mate-torpedo-negro.jpg" 
         alt="Mate-torpedo-negro"
         class="car_img" 
         />
@@ -82,7 +82,7 @@
     
      <div class="card">
         <img 
-        src="/img/Mate-torpedo-marron.jpg" 
+        src="../img/Mate-torpedo-marron.jpg" 
         alt="Mate-torpedo-marron"
         class="car_img" 
         />
@@ -93,7 +93,7 @@
 
     <div class="card">
         <img 
-        src="/img/Mate-imperial-virola-cincelada.jpg" 
+        src="../img/Mate-imperial-virola-cincelada.jpg" 
         alt="Mate-imperial-negro"
         class="car_img" 
         />
@@ -104,7 +104,7 @@
 
     <div class="card">
         <img 
-        src="/img/Mate-imperial-marron.jpg" 
+        src="../img/Mate-imperial-marron.jpg" 
         alt="Mate-imperial-marron"
         class="car_img" 
         />
@@ -115,7 +115,7 @@
 
     <div class="card">
         <img 
-        src="/img/Mate-camionero.jpg" 
+        src="../img/Mate-camionero.jpg" 
         alt="Mate-camionero"
         class="car_img" 
         />
@@ -126,7 +126,7 @@
 
     <div class="card">
         <img 
-        src="/img/Mate-calabaza-base y virola alpaca.jpg" 
+        src="../img/Mate-calabaza-base y virola alpaca.jpg" 
         alt="Mate-calabaza-base y virola alpaca"
         class="car_img" 
         />
@@ -137,7 +137,7 @@
 
     <div class="card">
         <img 
-        src="/img/Mate-ceramica.jpg" 
+        src="../img/Mate-ceramica.jpg" 
         alt="Mate-ceramica"
         class="car_img" 
         />
@@ -148,7 +148,7 @@
 
     <div class="card">
         <img 
-        src="/img/Mate-aceroinoxidable.jpg" 
+        src="../img/Mate-aceroinoxidable.jpg" 
         alt="Mate-aceroinoxidable"
         class="car_img" 
         />
