--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="img/Icono silueta mate.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./img/Icono silueta mate.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;1,700&display=swap" rel="stylesheet">
@@ -20,7 +20,7 @@
             <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <img src="../img/silueta_mate_imagen-transformed.png" alt="Logotipo Olaf-Mates"class="logo">
             <div class="container-fluid">
-                <a class="navbar-brand" href="../index.html">Progra-Mates</a>
+                <a class="navbar-brand" href="./index.html">Progra-Mates</a>
              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                <span class="navbar-toggler-icon"></span>
              </button>
@@ -170,7 +170,7 @@
     <section class="video">
         <div class="contenedor-video p-3">
             <h2 class="titulo_video">Aqui como prepararlo</h2>
-            <iframe width="100%" height="400" src="/video/Preparar un buen mate en 30 segundos.webm" style="border: none;" title="Preparar un buen mate en 30 segundos" frameborder="0" allow="loop; accelerometer; clipboard-write; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe width="100%" height="400" src="./video/Preparar un buen mate en 30 segundos.webm" style="border: none;" title="Preparar un buen mate en 30 segundos" frameborder="0" allow="loop; accelerometer; clipboard-write; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             <a target="_blank" href="https://youtu.be/gtVjWY665VI"><button class="boton_video"> Sino click aqui</button></a>
         </div>
     </section>
