--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/img/Icono silueta mate.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./img/Icono silueta mate.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;1,700&display=swap" rel="stylesheet">
@@ -18,7 +18,7 @@
     <Nav class="navegacion">
         <div class="logo_container">
             <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <img src="../img/silueta_mate_imagen-transformed.png" alt="Logotipo Olaf-Mates"class="logo">
+            <img src="./img/silueta_mate_imagen-transformed.png" alt="Logotipo Olaf-Mates"class="logo">
             <div class="container-fluid">
                 <a class="navbar-brand" href="./index.html">Progra-Mates</a>
              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
