ajustando texto en card

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
     <section class="video">
         <div class="contenedor-video p-3">
             <h2 class="titulo_video">Aqui como prepararlo</h2>
-            <iframe width="100%" height="400" src="./video/Preparar un buen mate en 30 segundos.webm" style="border: none;" title="Preparar un buen mate en 30 segundos" frameborder="0" allow="loop; accelerometer; clipboard-write; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe width="100%" height="400" src="/video/Preparar un buen mate en 30 segundos.webm" style="border: none;" title="Preparar un buen mate en 30 segundos" frameborder="0" allow="loop; accelerometer; clipboard-write; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             <a target="_blank" href="https://youtu.be/gtVjWY665VI"><button class="boton_video"> Sino click aqui</button></a>
         </div>
     </section>
