terminando accesorios-imagenes

--- a/html/Accesorios.html
+++ b/html/Accesorios.html
@@ -49,26 +49,97 @@
      </nav>
      <!-- Barra de Navegacion - Fin-->
 </header>
-<h2 class="titulo_accesorios"> Accesorios </h2>
+<H2 class="titulo_mates"> Accesorios</H2>
 <!-- Contenido - Inicio -->
-<section class="conteiner_card"> 
-    <p class="card">1 Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti suscipit architecto ipsum explicabo, soluta porro accusantium nostrum corporis rem itaque inventore iusto, tempore, voluptate maiores vero quas ipsa incidunt repellat!</p>
-    <!-- Imagen-->
-    <p class="card">2 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Est deserunt sapiente ipsa in totam exercitationem quod sint dolorum, officia officiis natus neque, dolorem voluptate blanditiis. Et impedit laudantium placeat nihil!</p>
-    <!-- Imagen-->
-    <p class="card">3 Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, assumenda repellendus modi non rem perferendis dolorum? Perspiciatis esse maxime suscipit, repellendus rerum debitis obcaecati explicabo unde quis iusto quasi necessitatibus!</p>
-    <!-- Imagen-->
-    <p class="card">4 Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis hic dolores dolorum magni a blanditiis dolore natus quae odio esse atque, alias praesentium perferendis explicabo optio possimus, deserunt ullam ut.</p>
-    <!-- Imagen-->
-    <p class="card">5 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam blanditiis aut qui fuga, ab consequatur labore iusto recusandae eaque at maxime atque hic sapiente iure voluptatum voluptatem nulla assumenda maiores.</p>
-    <!-- Imagen-->
-    <p class="card">6 Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae numquam sint pariatur recusandae mollitia dolores voluptatum quibusdam molestias. Dolores est dolorum quod numquam ipsa pariatur maiores expedita omnis, voluptatibus cum!</p>
-    <!-- Imagen-->
-    <p class="card">7 Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste magni distinctio molestias et ullam, placeat corporis voluptas aut fugiat, voluptatum commodi officia rerum aspernatur enim inventore quo maxime quaerat aliquam.</p>
-    <!-- Imagen-->
-    <p class="card">8 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illum debitis quae qui quis deleniti ipsa molestias fugit inventore explicabo velit sapiente, aut reprehenderit praesentium! Adipisci officiis repudiandae ipsum beatae pariatur?</p>
-    <!-- Imagen-->
-    </section>
+<section class="conteiner_productos">
+  <div class="card">
+     <img 
+     src="../img/bombilla-pico-loro.jpeg" 
+     alt="bombilla-pico-de-loro-de-alpaca"
+     class="car_img" 
+     />
+ <div class="content_card">    
+     <p>Bombilla pico de loro de alpaca simple</p>
+ </div>
+ </div>
+ 
+  <div class="card">
+     <img 
+     src="../img/bombilla-pico-loro-cincelada.jpg" 
+     alt="bombilla-pico-de-loro-cincelada"
+     class="car_img" 
+     />
+ <div class="content_card">    
+     <p>Bombilla pico de loro Cincelada de alpaca</p>
+ </div>
+ </div>
+
+ <div class="card">
+     <img 
+     src="../img/bombilla-pico-rey.jpg" 
+     alt="bombilla-pico-de-rey"
+     class="car_img" 
+     />
+ <div class="content_card">    
+     <p>Bombilla pico de rey de alpaca simple</p>
+ </div>
+ </div> 
+
+ <div class="card">
+     <img 
+     src="../img/bombilla-pico-rey-3estrellas.png" 
+     alt="bombilla-pico-de-rey-3estrellas"
+     class="car_img" 
+     />
+ <div class="content_card">    
+     <p>Bombilla pico de rey cincelada edicion "3 estrellas"</p>
+ </div>
+ </div>
+
+ <div class="card">
+     <img 
+     src="../img/bombilla-plana-economica.jpg" 
+     alt="bombilla-plana-economica"
+     class="car_img" 
+     />
+ <div class="content_card">    
+     <p>Bombilla plana de alpaca economica</p>
+ </div>
+ </div>
+
+ <div class="card">
+     <img 
+     src="../img/bombilla-recta-alpaca.jpg" 
+     alt="bombilla-recta-alpaca"
+     class="car_img" 
+     />
+ <div class="content_card">    
+     <p>Bombilla recta de alpaca boquilla de bronce</p>
+ </div>
+ </div>
+
+ <div class="card">
+     <img 
+     src="../img/matera.webp" 
+     alt="matera"
+     class="car_img" 
+     />
+ <div class="content_card">    
+     <p>Matera para llevar todo lo del mate, varios colores.</p>
+ </div>
+ </div>
+
+ <div class="card">
+     <img 
+     src="../img/termo-media-manija.webp" 
+     alt="termo-media-manija"
+     class="car_img" 
+     />
+ <div class="content_card">    
+     <p>Termo acero inoxidable media manija con pico vertedor</p>
+ </div>
+ </div>
+</section>
 <!-- Contenido - Fin -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
