emprolijando-nosotros-y-detalles

--- a/html/Contacto.html
+++ b/html/Contacto.html
@@ -68,17 +68,7 @@
 
 </section> -->
 <br><br><br><br><br>
-<!-- Preguntas FAQ´s - Inicio -->
-<!-- <section class="preguntas">
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores eum totam amet error ipsa. Molestiae accusamus, ipsum et, maxime cupiditate ullam omnis beatae excepturi repellat exercitationem molestias tenetur eaque ab.</p>
-
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reiciendis, dicta debitis? Quos, ab illum blanditiis id veritatis aliquam suscipit quisquam deleniti nemo eos numquam ipsum, minima totam, tenetur accusantium laboriosam!</p>
-
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, sint esse fugiat numquam possimus aperiam error voluptate distinctio voluptatum qui recusandae ipsa doloribus sapiente amet at assumenda! Sint, nostrum officiis!</p>
-
-
-</section> -->
-<!-- Preguntas FAQ´s - Fin -->
+<!-- Mapa de ubicacion -->
 
 <!-- Imagen de abajo del todo-->
 <img src="" alt="">
