--- a/html/Nosotros.html
+++ b/html/Nosotros.html
@@ -50,32 +50,50 @@
      <!-- Barra de Navegacion - Fin-->
 </header>
 <!--Imagen - Arbol de Yerba Mate-->
-<div class="carousel-nosotros">
-  <div id="carouselExample" class="carousel slide">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="../img/mates-fuera.jpg" class="d-block w-100" alt="mates-fuera">
-      </div>
-      <div class="carousel-item">
-        <img src="../img/mate-montaña.jpg" class="d-block w-100" alt="mate-montaña">
-      </div>
-      <div class="carousel-item">
-        <img src="../img/mate-vist.jpg" class="d-block w-100" alt="mate-vista">
-      </div>
+<section class="container">
+
+  <div class="row">
+    
+    <div class="col-sm-12 col-md-6 col-lg-4">
+      <p class="nuestra_historia"> Somos un grupo de amigos amantes de los mates y de la programacion,juntando estas 2 creamos este espacio que lo llamamos "Progra-mate" haciendo alusion estas dos pasiones. Buscamos acercarte un buen producto y consejos de como utilizarlo de la mejor manera, que te acompañe en esos momentos de soledad, trabajo, viajes, encuentros, etc. Esperemos que podamos ser una pequeña parte de tu vida  y acompañarte a donde quiera que vayas a tomar unos mates. </p>
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
+  
+<!-- Carousel - Nosotros -->
+    <div class="col-sm-12 col-md-6 col-lg-8">
+     <div id="carouselExample" class="carousel slide">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="../img/mates-fuera.jpg" class="d-block w-100" alt="mates-fuera">
+        </div>
+
+        <div class="carousel-item">
+          <img src="../img/mate-montaña.jpg" class="d-block w-100" alt="mate-montaña">
+        </div>
+
+        <div class="carousel-item">
+         <img src="../img/mate-vist.jpg" class="d-block w-100" alt="mate-vista">
+        </div>
+
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+       <span class="carousel-control-next-icon" aria-hidden="true"></span>
+       <span class="visually-hidden">Next</span>
+      </button>
+
+     </div>
+    </div>
   </div>
-</div>
+
+</section>
+
 <br><br>
 
-<p class="nuestra_historia"> Somos un grupo de amigos amantes de los mates y de la programacion,juntando estas 2 creamos este espacio que lo llamamos "Progra-mate" haciendo alusion estas dos pasiones. Buscamos acercarte un buen producto y consejos de como utilizarlo de la mejor manera, que te acompañe en esos momentos de soledad, trabajo, viajes, encuentros, etc. Esperemos que podamos ser una pequeña parte de tu vida  y acompañarte a donde quiera que vayas a tomar unos mates. </p>
+
 <!-- Mapa de ubicacion-->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
