pag-contacto-y-partials

--- a/html/Contacto.html
+++ b/html/Contacto.html
@@ -49,24 +49,40 @@
      </nav>
      <!-- Barra de Navegacion - Fin-->
 </header>
+
+<!-- Contenido - Inicio -->
+<section class="form_container">
+  <H2 class="titulo_mates"> Contacto </H2>
+  <form action="" class="form__contacto">
+    <div class="form__control">
+      <input type="text" placeholder="Nombre" required/>
+    </div>
+    <div class="form__control">
+      <input type="text" placeholder="Apellido" disabled/>
+    </div>
+    <div class="form__control">
+      <input type="email" placeholder="Email" required/>
+    </div>
+    
+    <div class="form__control">
+      <textarea placeholder="Mensaje">
+      </textarea>
+    </div>
+    <div class="form__control">
+      <input type="checkbox" id="Info"/>
+      <label for="Info">Deseo que me lleguen ofertas</label>
+    </div>
+    <div class="form__control">
+      <button type="submit"  class="boton_abajo">Enviar</button>
+    </div>
+  </form>
+</section>
+
 <div class="zona_container">
 <h2 class="zona_mantenimiento"> Zona en mantenimiento, disculpe las molestias</h2>
 </div>
-<!-- <h2 class="titulo_contacto"> Contacto </h2> -->
-<!-- Contenido - Inicio -->
-<!-- <section class="formulario">
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error ut praesentium officia dolor. Et, ratione atque vel ducimus ex voluptate ea molestias magni, nihil similique quo officiis? Quia, ipsum nihil!
-    Quos voluptatum repellat necessitatibus enim ea, nulla voluptates quasi distinctio modi et, itaque dignissimos quisquam ipsa odio eius ducimus iusto expedita quaerat illo at. Optio, quae ad. Quisquam, doloremque temporibus?
-    Esse perferendis est cupiditate ea iure praesentium. Possimus modi, similique, suscipit cupiditate, laborum quibusdam animi sed aperiam ea voluptatum perspiciatis pariatur ullam ipsum corrupti atque fugiat amet reprehenderit dolor distinctio?
-    Sed suscipit, unde quam repudiandae magni sint, at pariatur inventore asperiores error praesentium in, earum nemo esse. Totam laboriosam modi incidunt vitae quas, architecto id? Pariatur officiis blanditiis illo dolorem.
-    Veritatis enim atque et tenetur? Repellendus nam ullam ratione voluptatem blanditiis quam et, aliquid at reprehenderit fugiat? Magnam rem totam molestiae veritatis! Itaque tempora temporibus quo neque sint a nulla.
-    Eos, iusto sed sapiente inventore animi nihil! Delectus cumque consequatur maiores facere dolorum quo corrupti consequuntur unde dicta ab modi omnis fugiat fuga, quibusdam doloribus recusandae fugit voluptates! Doloribus, voluptatum.
-    Sint maxime enim pariatur, temporibus nostrum eum consequatur consequuntur quidem? Repellendus similique doloremque et ipsum, cupiditate voluptatem fuga sint perferendis labore ducimus dolorum. Magni expedita numquam blanditiis et commodi dolorem?
-    Eveniet ad odit illum harum. Officiis minus in quisquam itaque, quia, obcaecati porro modi magnam, vitae dicta cum harum soluta necessitatibus consectetur delectus! Aspernatur neque corrupti deserunt architecto, culpa ullam.
-    Consequatur eaque iusto, deleniti repudiandae excepturi vel, repellat aut consectetur doloremque quaerat aliquid, dolorum error assumenda ab commodi quam eos blanditiis placeat cum odit perferendis adipisci quibusdam dolore. Veniam, dolorum.
-    Architecto deleniti iure asperiores illum maiores similique tempora repellendus quos rerum dolore dicta totam iste numquam porro eum expedita mollitia voluptate a optio aperiam perspiciatis, soluta animi amet at. Nulla!</p>
 
-</section> -->
+
 <br><br><br><br><br>
 <!-- Mapa de ubicacion -->
 
