--- a/html/Accesorios.html
+++ b/html/Accesorios.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Progra-Mates es un sitio web donde vas a poder encontrar productos referidos a la infusion llamada Mate. Aqui tambien podras encontrar un poco de informacion de como preparar esta maravillosa bebidad correctamente. En este sitio web te empaparas un poco de la costumbre del mate que tanto nos apasiona.">
+    <meta name="keywords" content="HTML, CSS, WEB-DEVELOPER, YERBA, MATE, BOMBILLA, TERMO">
     <link rel="shortcut icon" href="../img/Icono silueta mate.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/bootstrap.css">
     <link rel="stylesheet" href="../css/style.css">
