--- a/html/Contacto.html
+++ b/html/Contacto.html
@@ -35,15 +35,7 @@
              <li class="nav-item">
                <a class="nav-link" href="./Contacto.html">Contacto</a>
              </li>
-             <!-- <li class="nav-item dropdown">
-               <a class="nav-link dropdown-toggle" href="./Contacto.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                 Contacto
-               </a> -->
-               <!-- <ul class="dropdown-menu">
-                 <li><a class="dropdown-item" href="#">Action</a></li>
-                 <li><a class="dropdown-item" href="#">Another action</a></li>
-                 <li><a class="dropdown-item" href="#">Something else here</a></li>
-               </ul> -->
+             
              </li>
            </ul>
          </div>
@@ -53,31 +45,19 @@
 </header>
 
 <!-- Contenido - Inicio -->
-<section class="form_container">
-  <H2 class="titulo_mates"> Contacto </H2>
-  <form action="" class="form__contacto">
-    <div class="form__control">
-      <input type="text" placeholder="Nombre" required/>
-    </div>
-    <div class="form__control">
-      <input type="text" placeholder="Apellido" disabled/>
-    </div>
-    <div class="form__control">
-      <input type="email" placeholder="Email" required/>
-    </div>
-    
-    <div class="form__control">
-      <textarea placeholder="Mensaje">
-      </textarea>
-    </div>
-    <div class="form__control">
-      <input type="checkbox" id="Info"/>
-      <label for="Info">Deseo que me lleguen ofertas</label>
-    </div>
-    <div class="form__control">
-      <button type="submit"  class="boton_abajo">Enviar</button>
-    </div>
-  </form>
+
+<section>
+<div class="formulario-container">
+  <div class="formulario">
+      <span class="encabezado-form">Contactanos</span>
+      <input placeholder="Nombre" type="text" class="input">
+      <input placeholder="Email" id="mail" type="email" class="input">
+      <textarea placeholder="Dejanos un comentario" rows="10" cols="30" id="message" name="message" class="area-texto"></textarea>
+      <div class="boton-container">
+      <div class="send-boton">Enviar</div>
+  </div>
+</div>
+</div>
 </section>
 
 <div class="zona_container">
