ajustando-imagenes-map

--- a/html/Accesorios.html
+++ b/html/Accesorios.html
@@ -35,15 +35,6 @@
              <li class="nav-item">
                <a class="nav-link" href="./Contacto.html">Contacto</a>
              </li>
-             <!-- <li class="nav-item dropdown">
-               <a class="nav-link dropdown-toggle" href="./Contacto.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                 Contacto
-               </a> -->
-               <!-- <ul class="dropdown-menu">
-                 <li><a class="dropdown-item" href="#">Action</a></li>
-                 <li><a class="dropdown-item" href="#">Another action</a></li>
-                 <li><a class="dropdown-item" href="#">Something else here</a></li>
-               </ul> -->
              </li>
            </ul>
          </div>
@@ -51,12 +42,12 @@
      </nav>
      <!-- Barra de Navegacion - Fin-->
 </header>
-<H2 class="titulo_mates"> Accesorios</H2>
+<H2 class="imagen-titulo"> Accesorios</H2>
 <!-- Contenido - Inicio -->
 <section class="conteiner_productos">
   <div class="card">
      <img 
-     src="../img/bombilla-pico-loro.jpeg" 
+     src="../img/bombilla-pico-loro.webp" 
      alt="bombilla-pico-de-loro-de-alpaca"
      class="car_img" 
      />
@@ -67,7 +58,7 @@
  
   <div class="card">
      <img 
-     src="../img/bombilla-pico-loro-cincelada.jpg" 
+     src="../img/bombilla-pico-loro-cincelada.webp" 
      alt="bombilla-pico-de-loro-cincelada"
      class="car_img" 
      />
@@ -78,7 +69,7 @@
 
  <div class="card">
      <img 
-     src="../img/bombilla-pico-rey.jpg" 
+     src="../img/bombilla-pico-rey.webp" 
      alt="bombilla-pico-de-rey"
      class="car_img" 
      />
@@ -89,7 +80,7 @@
 
  <div class="card">
      <img 
-     src="../img/bombilla-pico-rey-3estrellas.png" 
+     src="../img/bombilla-pico-rey-3estrellas.webp" 
      alt="bombilla-pico-de-rey-3estrellas"
      class="car_img" 
      />
@@ -100,7 +91,7 @@
 
  <div class="card">
      <img 
-     src="../img/bombilla-plana-economica.jpg" 
+     src="../img/bombilla-plana-economica.webp" 
      alt="bombilla-plana-economica"
      class="car_img" 
      />
@@ -111,7 +102,7 @@
 
  <div class="card">
      <img 
-     src="../img/bombilla-recta-alpaca.jpg" 
+     src="../img/bombilla-recta-alpaca.webp" 
      alt="bombilla-recta-alpaca"
      class="car_img" 
      />
