--- a/html/Contacto.html
+++ b/html/Contacto.html
@@ -45,6 +45,7 @@
 </header>
 
 <!-- Contenido - Inicio -->
+<H2 class="imagen-titulo"> Contacto </H2>
 
 <section>
 <div class="formulario-container">
@@ -60,14 +61,15 @@
 </div>
 </section>
 
-<div class="zona_container">
-<h2 class="zona_mantenimiento"> Zona en mantenimiento, disculpe las molestias</h2>
-</div>
 
 
-<br><br><br><br><br>
+
 <!-- Mapa de ubicacion -->
+<section>
+  <p class="encontranos"> Encontranos dentro del paseo de compras</p>
 
+  <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1953.23123493359!2d-58.427165277367756!3d-34.58063045980838!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sar!4v1701986788850!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+</section>
 <!-- Imagen de abajo del todo-->
 <img src="" alt="">
 
