--- a/html/Nosotros.html
+++ b/html/Nosotros.html
@@ -35,15 +35,6 @@
              <li class="nav-item">
                <a class="nav-link" href="./Contacto.html">Contacto</a>
              </li>
-             <!-- <li class="nav-item dropdown">
-               <a class="nav-link dropdown-toggle" href="./Contacto.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                 Contacto
-               </a> -->
-               <!-- <ul class="dropdown-menu">
-                 <li><a class="dropdown-item" href="#">Action</a></li>
-                 <li><a class="dropdown-item" href="#">Another action</a></li>
-                 <li><a class="dropdown-item" href="#">Something else here</a></li>
-               </ul> -->
              </li>
            </ul>
          </div>
@@ -51,11 +42,12 @@
      </nav>
      <!-- Barra de Navegacion - Fin-->
 </header>
-<!--Imagen - Arbol de Yerba Mate-->
-<section class="container">
 
+
+<H2 class="imagen-titulo"> Nosotros </H2>
+
+<section class="container">
   <div class="row">
-    
     <div class="col-sm-12 col-md-6 col-lg-4">
       <p class="nuestra_historia"> Somos un grupo de amigos amantes de los mates y de la programacion,juntando estas 2 creamos este espacio que lo llamamos "Progra-mate" haciendo alusion estas dos pasiones. Buscamos acercarte un buen producto y consejos de como utilizarlo de la mejor manera, que te acompañe en esos momentos de soledad, trabajo, viajes, encuentros, etc. Esperemos que podamos ser una pequeña parte de tu vida  y acompañarte a donde quiera que vayas a tomar unos mates. </p>
     </div>
@@ -65,15 +57,15 @@
      <div id="carouselExample" class="carousel slide">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="../img/mates-fuera.jpg" class="d-block w-100" alt="mates-fuera">
+          <img src="../img/mates-fuera.webp" class="d-block w-100" alt="mates-fuera">
         </div>
 
         <div class="carousel-item">
-          <img src="../img/mate-montaña.jpg" class="d-block w-100" alt="mate-montaña">
+          <img src="../img/mate-montaña.webp" class="d-block w-100" alt="mate-montaña">
         </div>
 
         <div class="carousel-item">
-         <img src="../img/mate-vist.jpg" class="d-block w-100" alt="mate-vista">
+         <img src="../img/mate-vist.webp" class="d-block w-100" alt="mate-vista">
         </div>
 
       </div>
