--- a/index.html
+++ b/index.html
@@ -40,15 +40,7 @@
                  <li class="nav-item">
                    <a class="nav-link" href="./html/Contacto.html">Contacto</a>
                  </li>
-                 <!-- <li class="nav-item dropdown">
-                   <a class="nav-link dropdown-toggle" href="./Contacto.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                     Contacto
-                   </a> -->
-                   <!-- <ul class="dropdown-menu">
-                     <li><a class="dropdown-item" href="#">Action</a></li>
-                     <li><a class="dropdown-item" href="#">Another action</a></li>
-                     <li><a class="dropdown-item" href="#">Something else here</a></li>
-                   </ul> -->
+              
                  </li>
                </ul>
              </div>
@@ -60,7 +52,7 @@
 
     </header>
     <!-- Contenido - Inicio -->
-    <H1 class="titulo">Progra-Mates</H1>
+    <H1 class="imagen-titulo">Progra-Mates</H1>
     <h3 class="intro_index">Bienvenido/a a este sitio web dedicado a la gran infusión y sus componentes que forman el MATE. Esta bebida tradicional no solo es una parte esencial de la vida cotidiana en muchas regiones, sino que también representa una conexión profunda con las raíces culturales de Sudamérica.</h3>
     <section class="section_home">
         <!-- Como preparar un mate  - Cards con Bootstrap -->
