puliendo-textos-y-queries

--- a/html/Nosotros.html
+++ b/html/Nosotros.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Progra-Mates es un sitio web donde vas a poder encontrar productos referidos a la infusion llamada Mate. Aqui tambien podras encontrar un poco de informacion de como preparar esta maravillosa bebidad correctamente. En este sitio web te empaparas un poco de la costumbre del mate que tanto nos apasiona.">
+    <meta name="description" content="Progra-Mates es un sitio web donde vas a poder encontrar productos referidos a la infusión llamada Mate. Aquí también podrás encontrar un poco de información de como preparar esta maravillosa bebida correctamente. En este sitio web te empaparás un poco de la costumbre del mate que tanto nos apasiona.">
     <meta name="keywords" content="HTML, CSS, WEB-DEVELOPER, YERBA, MATE, BOMBILLA, TERMO">
     <link rel="shortcut icon" href="../img/Icono silueta mate.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/bootstrap.css">
@@ -48,12 +48,12 @@
 
 <section class="container">
   <div class="row">
-    <div class="col-sm-12 col-md-6 col-lg-4">
-      <p class="nuestra_historia"> Somos un grupo de amigos amantes de los mates y de la programacion,juntando estas 2 creamos este espacio que lo llamamos "Progra-mate" haciendo alusion estas dos pasiones. Buscamos acercarte un buen producto y consejos de como utilizarlo de la mejor manera, que te acompañe en esos momentos de soledad, trabajo, viajes, encuentros, etc. Esperemos que podamos ser una pequeña parte de tu vida  y acompañarte a donde quiera que vayas a tomar unos mates. </p>
+    <div class="col-sm-12 col-md-12 col-lg-12">
+      <p class="nuestra_historia"> Somos un grupo de amigos amantes de los mates y de la programación, juntando estas dos creamos este espacio que lo llamamos "Progra-mate" haciendo alusión estas dos pasiones. Buscamos acercarte un buen producto y consejos de como utilizarlo de la mejor manera, que te acompañe en esos momentos de soledad, trabajo, viajes, encuentros, etc. Esperemos que podamos ser una pequeña parte de tu vida y acompañarte a donde quiera que vayas a tomar unos mates. </p>
     </div>
   
 <!-- Carousel - Nosotros -->
-    <div class="col-sm-12 col-md-6 col-lg-8">
+    <div class="col-sm-12 col-md-12 col-lg-12">
      <div id="carouselExample" class="carousel slide">
       <div class="carousel-inner">
         <div class="carousel-item active">
@@ -67,6 +67,10 @@
         <div class="carousel-item">
          <img src="../img/mate-vist.webp" class="d-block w-100" alt="mate-vista">
         </div>
+
+        <div class="carousel-item">
+          <img src="../img/mate-argentina.webp" class="d-block w-100" alt="mate-vista">
+         </div>
 
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
