emprolijando-codigo-probando-cards-home

--- a/index.html
+++ b/index.html
@@ -53,11 +53,13 @@
     </header>
     <!-- Contenido - Inicio -->
     <H1 class="imagen-titulo">Progra-Mates</H1>
-    <h3 class="intro_index">Bienvenido/a a este sitio web dedicado a la gran infusión y sus componentes que forman el MATE. Esta bebida tradicional no solo es una parte esencial de la vida cotidiana en muchas regiones, sino que también representa una conexión profunda con las raíces culturales de Sudamérica.</h3>
     <section class="section_home">
-        <!-- Como preparar un mate  - Cards con Bootstrap -->
-      <div class="como_mate">
-
+      <h3 class="intro_index">Bienvenido/a a este sitio web dedicado a la gran infusión y sus componentes que forman el MATE. Esta bebida tradicional no solo es una parte esencial de la vida cotidiana en muchas regiones, sino que también representa una conexión profunda con las raíces culturales de Sudamérica.</h3>
+      <!-- Como preparar un mate -->
+      
+      <!-- <div class="como_mate"> -->    
+        
+<!-- 
         <div class="card">
           <div class="card-body">
             <h5 class="card-title">Paso 1</h5>
@@ -119,7 +121,7 @@
                 </div>
                 <img src="./img/paso6-cebar-mate_desdeeltermo_como-hacer_mate_argentina-1.jpg.webp" class="card-img-bottom" alt="cebar-mate-desde-el-termo.jpg">
               </div>
-        </div>
+        </div> -->
 
     </section>
 
@@ -140,6 +142,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="./js/bootstrap.js"></script>
+    <script src="https://kit.fontawesome.com/255380f960.js" crossorigin="anonymous"></script>
 </body>
 
 <footer>
