card-responsive-index

--- a/html/Productos.html
+++ b/html/Productos.html
@@ -57,7 +57,7 @@
         class="car_img" 
         />
     <div class="content_card">    
-        <p>Mate torpedo de calabaza color negro</p>
+        <p class="texto_producto">Mate torpedo de calabaza color negro</p>
     </div>
     </div>
     
