solucionando-responsive-cards

--- a/index.html
+++ b/index.html
@@ -70,6 +70,19 @@
 
 
         </div>
+        
+        <div class="contenido-card">
+          <div class="titulo-instructivo">
+            <img class="foto-card" src="./img/programando.webp" alt="pava-teclado">
+            <h2>Paso 1</h2>
+          </div>
+          <div class="descripcion-instructivo">
+            <p>Antes de seguir codeando, ponemos el agua a calentar hasta antes  de que entre en ebullición (80°C aprox.). Si es pava electrica poner en el indicador de agua antes de hervir o indicador de "agua para mate".Luego colocarla en un termo para que mantenga la temperatura.</p>
+          </div>
+
+
+        </div>
+
        </div> 
 
 <!-- 
