--- a/html/Nosotros.html
+++ b/html/Nosotros.html
@@ -89,10 +89,9 @@
 
 </section>
 
-<br><br>
+  
+  <a class="direction" href="./Contacto.html">Esperamos a que nos visites aqui</a>
 
-
-<!-- Mapa de ubicacion-->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="./js/bootstrap.js"></script>
