--- a/html/Nosotros.html
+++ b/html/Nosotros.html
@@ -49,7 +49,7 @@
 <section class="container">
   <div class="row">
     <div class="col-sm-12 col-md-12 col-lg-12">
-      <p class="nuestra_historia"> Somos un grupo de amigos amantes de los mates y de la programación, juntando estas dos creamos este espacio que lo llamamos "Progra-mate" haciendo alusión estas dos pasiones. Buscamos acercarte un buen producto y consejos de como utilizarlo de la mejor manera, que te acompañe en esos momentos de soledad, trabajo, viajes, encuentros, etc. Esperemos que podamos ser una pequeña parte de tu vida y acompañarte a donde quiera que vayas a tomar unos mates. </p>
+      <p class="nuestra_historia"> Somos un grupo de amigos, amantes de los mates y de la programación, juntando estas dos creamos este espacio que lo llamamos "Progra-mate" haciendo alusión a estas dos pasiones. Buscamos acercarte un buen producto y consejos de como utilizarlo de la mejor manera, que te acompañe en esos momentos de soledad, trabajo, viajes, encuentros, etc. Esperamos que podamos ser una pequeña parte de tu vida y acompañarte a donde quiera que vayas a tomar unos mates. </p>
     </div>
   
 <!-- Carousel - Nosotros -->
@@ -57,7 +57,7 @@
      <div id="carouselExample" class="carousel slide">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="../img/mates-fuera.webp" class="d-block w-100" alt="mates-fuera">
+          <img src="../img/mates-afuera.webp" class="d-block w-100" alt="mates-fuera">
         </div>
 
         <div class="carousel-item">
@@ -69,7 +69,7 @@
         </div>
 
         <div class="carousel-item">
-          <img src="../img/mate-argentina.webp" class="d-block w-100" alt="mate-vista">
+          <img src="../img/mates-argentina.webp" class="d-block w-100" alt="mate-argentina">
          </div>
 
       </div>
