puliendo-footer-logos

--- a/html/Productos.html
+++ b/html/Productos.html
@@ -149,7 +149,7 @@
   <section class="pie_pagina">
     <section class="links">
         
-        <img src="../img/silueta_mate_imagen-transformed.png" alt="Logotipo Progra-Mates"class="logo">
+        <img src="../img/silueta_mate_imagen-transformed.png" alt="Logotipo Progra-Mates"class="logo-footer">
       <ul>
         <li class="link_item">
           <a href="../index.html">Home</a>
