--- a/error-404.html
+++ b/error-404.html
@@ -19,10 +19,9 @@
         <h2>Error 404</h2>
     </div>
     <div class="mensaje-error">
-        <i class="bx bx-x"></i>
-        <h2>No se encontro la pagina</h2>
-        <p>Posiblemente este mal escrita la direccion</p>
+            <h2>No se encontro la pagina</h2>
+            <p>Posiblemente este mal escrita la direccion</p>
     </div>
-    <a href="./index.html"><i class="bx bx-arrow-back"></i>Volver a Home</a>
+    <a href="./index.html"></i>Volver a Home</a>
 </body>
 </html>
