--- a/error-404.html
+++ b/error-404.html
@@ -15,7 +15,8 @@
 </head>
 
 <body>
-    <div class="error-404">
+    <section class="error-404"></section>
+    <div class="titulo-error-404">
         <h2>Error 404</h2>
     </div>
     <div class="mensaje-error">
