--- a/error-404.html
+++ b/error-404.html
@@ -23,6 +23,6 @@
             <h2>No se encontro la pagina</h2>
             <p>Posiblemente este mal escrita la direccion</p>
     </div>
-    <a href="./index.html"></i>Volver a Home</a>
+    <a href="index.html"></i>Volver a Home</a>
 </body>
 </html>
