--- a/error-404.html
+++ b/error-404.html
@@ -15,15 +15,17 @@
 </head>
 
 <body>
-    <section class="error-404">
-        <div class="titulo-error-404">
-            <h2>Error 404</h2>
-        </div>
-        <div class="mensaje-error">
-            <h2>No se encontro la pagina</h2>
-            <p>Posiblemente este mal escrita la direccion</p>
-        </div>
-        <a href="index.html"></i>Volver a Home</a>
-    </section>
+    <main class="contenedor-error">
+        <section class="error-404">
+            <div class="titulo-error-404">
+              <h2>Error 404</h2>
+            </div>
+            <div class="mensaje-error">
+                <h2>No se encontro la pagina</h2>
+                <p>Posiblemente este mal escrita la direccion</p>
+            </div>
+                <a href="index.html"></i>Volver a Home</a>
+        </section>
+    </main>
 </body>
 </html>
